@@ -18,7 +18,7 @@
  - PERFORMANCE OF THIS SOFTWARE.
 -->
 
-<!-- File: $Id: Bv9ARM-book.xml,v 1.380.14.7 2009/03/05 04:31:46 marka Exp $ -->
+<!-- File: $Id: Bv9ARM-book.xml,v 1.380.14.8 2009/03/13 01:52:35 jinmei Exp $ -->
 <book xmlns:xi="http://www.w3.org/2001/XInclude">
   <title>BIND 9 Administrator Reference Manual</title>
 
@@ -7849,7 +7849,7 @@ avoid-v6-udp-ports { 40000; range 50000 60000; };
 	      </listitem>
 	    </varlistentry>
 
-	    <varlistentry>
+	    <varlistentry id="clients-per-query">
 	      <term><command>clients-per-query</command></term>
 	      <term><command>max-clients-per-query</command></term>
               <listitem>
@@ -12086,10 +12086,18 @@ $GENERATE 1-127 $ CNAME $.0</programlisting>
 		    </entry>
 		    <entry colname="3">
 		      <para>
-			Queries for which the server
+			Recursive queries for which the server
 			discovered an excessive number of existing
 			recursive queries for the same name, type and
 			class and were subsequently dropped.
+			This is the number of dropped queries due to
+			the reason explained with the
+			<command>clients-per-query</command>
+			and
+			<command>max-clients-per-query</command>
+			options
+			(see the description about
+			<xref linkend="clients-per-query"/>.)
 			This corresponds to the
 			<command>dropped</command> counter
 			of previous versions of
@@ -12111,6 +12119,14 @@ $GENERATE 1-127 $ CNAME $.0</programlisting>
 			<command>failure</command> counter
 			of previous versions of
 			<acronym>BIND</acronym> 9.
+			Note: this counter is provided mainly for
+			backward compatibility with the previous versions.
+			Normally a more fine-grained counters such as
+			<command>AuthQryRej</command> and
+			<command>RecQryRej</command>
+			that would also fall into this counter are provided,
+			and so this counter would not be of much
+			interest in practice.
 		      </para>
 		    </entry>
 		  </row>
